fixed issue on mobile

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -151,7 +151,7 @@ input{
 	.name {
 		float: right;
 		width: 70%;
-		padding-top: 20px;;
+		padding-top: 10px;
 	}
 	.image img {
 		width: 100%;
